[package]
name = "memo-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
hex = "0.4.3"
thousands = "0.2.0"
#rustc-hex = { version = "2.1.0", default-features = false }
