[package]
name = "memo-parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
hex = "0.4.3"
thousands = "0.2.0"
web3 = "0.18.0"
anychain-tron = "0.2.2"
tokio = "1.17.0"
chrono = "0.4.19"
dotenv = "0.15.0"
colored = "2.0.0"
bs58 = "0.4.0"
